k8s-deploy/prod/album.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: notebook-album 
spec:
  selector:
    matchLabels:
      app: notebook-album
  replicas: 1
  template:
    metadata:
      labels:
        app: notebook-album 
    spec:
      terminationGracePeriodSeconds: 180
      priorityClassName: wait-for-besp
      containers:
      - name: album 
        image: "notebook-album:latest"
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: album-service
spec:
  selector:
    app: notebook-album 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
