k8s-deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jupyter-ingress
  annotations:
    app: jupyter-ingress
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
      - jupyter-dev.bioturing.com
      secretName: tls-secret
  rules:
    - host: jupyter-dev.bioturing.com
      http:
        paths:
        - path: /jupyterhub(/|$)(.*)
          backend:
            serviceName: proxy-public
            servicePort: 80
